links and students updated

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="image fit"><a href="http://faculty.iiitd.ac.in/~dbera/"><img src="images/dbera.png" alt="" /></a></span>
-								<h3>Debajyoti Bera</h3>
+								<span class="image fit"><a href="http://faculty.iiitd.ac.in/~dbera/" target="_blank" rel="noopener noreferrer"><img src="images/dbera.png" alt="" /></a></span>
+								<h3><a href="http://faculty.iiitd.ac.in/~dbera/" target="_blank" rel="noopener noreferrer">Debajyoti Bera</a></h3>
 							</section>
 						</div>
 					</div>
@@ -76,36 +76,49 @@
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="image fit"><a href="http://chatsagnik.com/"><img src="images/sagnik.png" alt="" /></a></span>
-								<h3>Sagnik Chatterjee</h3>
-								<h4>4<sup>th</sup> Year</h4>
+								<span class="image fit"><a href="http://chatsagnik.com/" target="_blank" rel="noopener noreferrer"><img src="images/sagnik.png" alt="" /></a></span>
+								<h3><a href="http://chatsagnik.com/" target="_blank" rel="noopener noreferrer">Sagnik Chatterjee</a></h3>
+								<!-- <h4>4<sup>th</sup> Year</h4> -->
+								<h4>Quantum Learning Theory</h4>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="image fit"><a href="https://sites.google.com/iiitd.ac.in/
-									tharrma"><img src="images/tharrma.jpg" alt="" /></a></span>
-								<h3>Tharrmashastha SAPV </h3>
-								<h4>4<sup>th</sup> Year</h4>
+									tharrma" target="_blank" rel="noopener noreferrer"><img src="images/tharrma.jpg" alt="" /></a></span>
+								<h3><a href="https://sites.google.com/iiitd.ac.in/
+									tharrma" target="_blank" rel="noopener noreferrer">Tharrmashastha SAPV</a></h3>
+								<!-- <h4>4<sup>th</sup> Year</h4> -->
+								<h4>Quantum Algorithms & Query Complexity</h4>
 							</section>
 						</div>
 					</div>
 					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<h2>Masters Students</h2>
+						<div class="col-6 col-6-medium col-12-small">
+							<h2 class="students left">Masters Students</h2>
 							<section class="box style2">
-								<ul class="students">
-									<li>Sanchita Saha</li>
+								<ul class="students left">
+									<li><a href="https://www.linkedin.com/in/san-saha/" target="_blank" rel="noopener noreferrer">Sanchita Saha</a></li>
+									<li><a href="https://www.linkedin.com/in/karan-siruvuri/" target="_blank" rel="noopener noreferrer">Karan Raju Siruvuri</a></li>
+									<li><a href="https://www.linkedin.com/in/devanshds/" target="_blank" rel="noopener noreferrer">Devansh Shukla</a></li>
+									<!-- <li><a href="" target="_blank" rel="noopener noreferrer">Shanu</a></li> -->
+									<li>Shanu</li>
 								</ul>
 							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<h2>Student Interns</h2>
+						<div class="col-6 col-6-medium col-12-small">
+							<h2 class="students right">Student Interns</h2>
 							<section class="box style2">
-								<ul class="students">
-									<li>Rohit Beriwal</li>
-									<li>Harsh Rathee</li>
-									<li>Ayushi Dubal</li>
+								<ul class="students right">
+									<li><a href="https://27rohitb.github.io/" target="_blank" rel="noopener noreferrer">Rohit Beriwal</a> (currently at Oxford Quantum)</li>
+									<li><a href="https://www.linkedin.com/in/harsh-rathee/" target="_blank" rel="noopener noreferrer">Harsh Rathee</a>(currently PhD at Cambridge)</li>
+									<li><a href="https://ayushidubal.github.io/" target="_blank" rel="noopener noreferrer">Ayushi Dubal</a> (currently B.Tech at BITS Goa)</li>
+									<li><a href="https://www.linkedin.com/in/nakul-aggarwal/" target="_blank" rel="noopener noreferrer">Nakul Agarwal</a> (currently Masters at Univ. of Alberta)</li>				
+									<!-- <li><a href="" target="_blank" rel="noopener noreferrer">Harshit Garg</a></li> -->
+									<li>Harshit Garg (currently at NSIT)</li>
+									<li><a href="https://github.com/singhmeet11" target="_blank" rel="noopener noreferrer">Parmeet Singh</a> (currently at DTU)</li>
+									<li><a href="https://www.linkedin.com/in/rohan-bhatia-b146a6163/" target="_blank" rel="noopener noreferrer">Rohan Bhatia</a> (currently at DTU)</li>
+									
 								</ul>
 							</section>
 						</div>
@@ -121,14 +134,14 @@
 					</header>
 					<div class="row">
 						<ul class="papers">
-							<li>D. Bera and S. Chatterjee. Quantum Boosting using Domain-Partitioning Hypotheses. arXiv preprint <a href="https://arxiv.org/abs/2110.12793">arXiv:2110.12793</a>(2021).</li>
-							<li>D. Bera, and Tharrmashastha SAPV. HighDist Framework: Algorithms and Applications. arXiv preprint. <a href="https://arxiv.org/abs/2103.09033">arXiv:2103.09033</a>(2021).</li>
-							<li>D. Bera and Tharrmashastha SAPV. Quantum and Randomised Algorithms for Non-linearity Estimation. ACM Transactions on Quantum Computing (2021).</li>
-							<li>D. Bera and S. Chatterjee. Applying the Quantum Alternating Operator Ansatz to the Graph Matching Problem. AQIS 2020.</li>
-							<li>D. Bera and Tharrmashastha SAPV. Error reduction of quantum algorithms. Physical Review A 100.012331 (2019).</li>
-							<li>D. Bera, S. Maitra, and Tharrmashastha SAPV. Efficient quantum algorithms related to autocorrelation spectrum. In International Conference on Cryptology in India (INDOCRYPT 2019).</li>
-							<li>D. Bera. Amplitude amplification for operator identification and randomized classes. In International Computing and Combinatorics Conference (COCOON 2018).</li>
-							<li>D. Bera. Detection and Diagnosis of Single Faults in Quantum Circuits. In IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems, vol. 37, no. 3. (2018)</li>
+							<li>D. Bera and S. Chatterjee. Quantum Boosting using Domain-Partitioning Hypotheses. arXiv preprint <a href="https://arxiv.org/abs/2110.12793" target="_blank" rel="noopener noreferrer">arXiv:2110.12793</a>(2021).</li>
+							<li>D. Bera, and Tharrmashastha SAPV. HighDist Framework: Algorithms and Applications. arXiv preprint. <a href="https://arxiv.org/abs/2103.09033" target="_blank" rel="noopener noreferrer">arXiv:2103.09033</a>(2021).</li>
+							<li>D. Bera and Tharrmashastha SAPV. Quantum and Randomised Algorithms for Non-linearity Estimation. <a href="https://doi.org/10.1145/3456509" target="_blank" rel="noopener noreferrer">ACM Transactions on Quantum Computing</a> (2021).</li>
+							<li>D. Bera and S. Chatterjee. Applying the Quantum Alternating Operator Ansatz to the Graph Matching Problem. AQIS 2020. <a href="https://arxiv.org/abs/2011.11918" target="_blank" rel="noopener noreferrer">arXiv:2011.11918</a></li>
+							<li>D. Bera and Tharrmashastha SAPV. Error reduction of quantum algorithms. <a href="https://link.aps.org/doi/10.1103/PhysRevA.100.012331" target="_blank" rel="noopener noreferrer">Physical Review A 100.012331</a> (2019).</li>
+							<li>D. Bera, S. Maitra, and Tharrmashastha SAPV. Efficient quantum algorithms related to autocorrelation spectrum. In International Conference on Cryptology in India (<a href="https://doi.org/10.1007/978-3-030-35423-7_21" target="_blank" rel="noopener noreferrer">INDOCRYPT</a> 2019).</li>
+							<li>D. Bera. Amplitude amplification for operator identification and randomized classes. In International Computing and Combinatorics Conference (<a href="https://doi.org/10.1007/978-3-319-94776-1_48" target="_blank" rel="noopener noreferrer">COCOON</a> 2018).</li>
+							<li>D. Bera. Detection and Diagnosis of Single Faults in Quantum Circuits. In <a href="https://doi.org/10.1109/TCAD.2017.2717783" target="_blank" rel="noopener noreferrer">IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems, vol. 37, no. 3.</a> (2018)</li>
 						</ul>
 						</div>
 				</div>
