changed stuff, added links, new papers, etc

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="image fit"><a href="http://chatsagnik.com/" target="_blank" rel="noopener noreferrer"><img src="images/sagnik.png" alt="" /></a></span>
-								<h3><a href="http://chatsagnik.com/" target="_blank" rel="noopener noreferrer">Sagnik Chatterjee</a></h3>
+								<span class="image fit"><a href="https://chatsagnik.github.io/" target="_blank" rel="noopener noreferrer"><img src="images/sagnik.jpg" alt="" /></a></span>
+								<h3><a href="https://chatsagnik.github.io/" target="_blank" rel="noopener noreferrer">Sagnik Chatterjee</a></h3>
 								<!-- <h4>4<sup>th</sup> Year</h4> -->
 								<h4>Quantum Learning Theory</h4>
 							</section>
@@ -134,21 +134,22 @@
 					</header>
 					<div class="row">
 						<ul class="papers">
-							<li>D. Bera and S. Chatterjee. Quantum Boosting using Domain-Partitioning Hypotheses. arXiv preprint <a href="https://arxiv.org/abs/2110.12793" target="_blank" rel="noopener noreferrer">arXiv:2110.12793</a>(2021).</li>
-							<li>D. Bera, and Tharrmashastha SAPV. HighDist Framework: Algorithms and Applications. arXiv preprint. <a href="https://arxiv.org/abs/2103.09033" target="_blank" rel="noopener noreferrer">arXiv:2103.09033</a>(2021).</li>
-							<li>D. Bera and Tharrmashastha SAPV. Quantum and Randomised Algorithms for Non-linearity Estimation. <a href="https://doi.org/10.1145/3456509" target="_blank" rel="noopener noreferrer">ACM Transactions on Quantum Computing</a> (2021).</li>
-							<li>D. Bera and S. Chatterjee. Applying the Quantum Alternating Operator Ansatz to the Graph Matching Problem. AQIS 2020. <a href="https://arxiv.org/abs/2011.11918" target="_blank" rel="noopener noreferrer">arXiv:2011.11918</a></li>
-							<li>D. Bera and Tharrmashastha SAPV. Error reduction of quantum algorithms. <a href="https://link.aps.org/doi/10.1103/PhysRevA.100.012331" target="_blank" rel="noopener noreferrer">Physical Review A 100.012331</a> (2019).</li>
-							<li>D. Bera, S. Maitra, and Tharrmashastha SAPV. Efficient quantum algorithms related to autocorrelation spectrum. In International Conference on Cryptology in India (<a href="https://doi.org/10.1007/978-3-030-35423-7_21" target="_blank" rel="noopener noreferrer">INDOCRYPT</a> 2019).</li>
-							<li>D. Bera. Amplitude amplification for operator identification and randomized classes. In International Computing and Combinatorics Conference (<a href="https://doi.org/10.1007/978-3-319-94776-1_48" target="_blank" rel="noopener noreferrer">COCOON</a> 2018).</li>
-							<li>D. Bera. Detection and Diagnosis of Single Faults in Quantum Circuits. In <a href="https://doi.org/10.1109/TCAD.2017.2717783" target="_blank" rel="noopener noreferrer">IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems, vol. 37, no. 3.</a> (2018)</li>
+							<li><span style="font-weight: bold;">Efficient Quantum Agnostic Improper Learning of Decision Trees</span>. D. Bera and S. Chatterjee. arXiv preprint <a href="https://arxiv.org/abs/2210.00212" target="_blank" rel="noopener noreferrer">arXiv:2210.00212</a>(2022)</li>
+							<li><span style="font-weight: bold;">Quantum Boosting using Domain-Partitioning Hypotheses</span>. D. Bera and S. Chatterjee. QTML 2022. arXiv preprint <a href="https://arxiv.org/abs/2110.12793" target="_blank" rel="noopener noreferrer">arXiv:2110.12793</a>(2021).</li>
+							<li><span style="font-weight: bold;">HighDist Framework: Algorithms and Applications</span>. D. Bera, and Tharrmashastha SAPV. arXiv preprint <a href="https://arxiv.org/abs/2103.09033" target="_blank" rel="noopener noreferrer">arXiv:2103.09033</a>(2021).</li>
+							<li><span style="font-weight: bold;">Quantum and Randomised Algorithms for Non-linearity Estimation</span>. D. Bera and Tharrmashastha SAPV. <a href="https://doi.org/10.1145/3456509" target="_blank" rel="noopener noreferrer">ACM Transactions on Quantum Computing</a> (2021).</li>
+							<li><span style="font-weight: bold;">Applying the Quantum Alternating Operator Ansatz to the Graph Matching Problem</span>. D. Bera and S. Chatterjee. AQIS 2020. <a href="https://arxiv.org/abs/2011.11918" target="_blank" rel="noopener noreferrer">arXiv:2011.11918</a></li>
+							<li><span style="font-weight: bold;">Error reduction of quantum algorithms</span>. D. Bera and Tharrmashastha SAPV.  <a href="https://link.aps.org/doi/10.1103/PhysRevA.100.012331" target="_blank" rel="noopener noreferrer">Physical Review A 100.012331</a> (2019).</li>
+							<li><span style="font-weight: bold;">Efficient quantum algorithms related to autocorrelation spectrum</span>. D. Bera, S. Maitra, and Tharrmashastha SAPV. In International Conference on Cryptology in India (<a href="https://doi.org/10.1007/978-3-030-35423-7_21" target="_blank" rel="noopener noreferrer">INDOCRYPT</a> 2019).</li>
+							<li><span style="font-weight: bold;">Amplitude amplification for operator identification and randomized classes</span>. D. Bera. In International Computing and Combinatorics Conference (<a href="https://doi.org/10.1007/978-3-319-94776-1_48" target="_blank" rel="noopener noreferrer">COCOON</a> 2018).</li>
+							<li><span style="font-weight: bold;">Detection and Diagnosis of Single Faults in Quantum Circuits</span>. D. Bera. In <a href="https://doi.org/10.1109/TCAD.2017.2717783" target="_blank" rel="noopener noreferrer">IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems, vol. 37, no. 3.</a> (2018)</li>
 						</ul>
 						</div>
 				</div>
 			</article>
 		
 		<!-- Projects -->
-		<article id="projects" class="wrapper style2">
+		<article id="projects" class="wrapper style2 projects">
 			<div class="container">
 				<header>
 					<h2>Projects</h2>
