--- a/events.html
+++ b/events.html
@@ -1,232 +1,241 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>BraQIIITD - The Quantum Lab at IIIT-D</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-        <link rel="icon" href="images/braqiiit.png" type="image/icon type">
-	</head>
-	<body class="is-preload">
 
-		<!-- Nav -->
-			<nav id="nav">
-				<div class="toggle">
-					<a href="#" class="toggle-button">
-						<span class="bar"></span>
-						<span class="bar"></span>
-						<span class="bar"></span>
-					</a>
-				</div>
-				<div class="navbar-links">
-					<ul class="container">
-						<li><a href="index.html#top">Home</a></li>
-						<li><a href="index.html#team">Team</a></li>
-						<li><a href="index.html#publications">Publications</a></li>
-						<li><a href="events.html">Events</a></li>
-						<li><a href="index.html#resources">Resources</a></li>
-						<li><a href="index.html#contact">Contact</a></li>
-					</ul>
-				</div>
-			</nav>
+<head>
+	<title>BraQIIITD - The Quantum Lab at IIIT-D</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="icon" href="images/braqiiit.png" type="image/icon type">
+</head>
 
-		<!-- Home -->
-		<article id="bsoctop" class="wrapper style3">
-			<div class="container">
-				<header class="bsocheader">
-					<h1>BraQIIIT Summer of Code 2022</h1>
-				</header>
-				<div class="row">
-					<p>
-					We are hosting the 2022 BraQIIIT Summer of Code between 03 June 2022 and 31 July 2022. 
-					The program aims to introduce students to Qiskit and get a hands-on learning of quantum computing and its nuances.
-					During the BSoC, the candidates will undergo a two week bootstrapping period with lectures on introduction to basic and advanced Qiskit. For the remainder of BSoC, the students will be divided into teams and be involved in various projects revolving around implemeting various quantum algorithms and testing them in simulators and actual quantum computers. This will be done under the mentorship of Qiskit advocates and the members of BraQIIIT. 
+<body class="is-preload">
+
+	<!-- Nav -->
+	<nav id="nav">
+		<div class="toggle">
+			<a href="#" class="toggle-button">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="bar"></span>
+			</a>
+		</div>
+		<div class="navbar-links">
+			<ul class="container">
+				<li><a href="index.html#top">Home</a></li>
+				<li><a href="index.html#team">Team</a></li>
+				<li><a href="index.html#publications">Publications</a></li>
+				<li><a href="events.html">Events</a></li>
+				<li><a href="index.html#resources">Resources</a></li>
+				<li><a href="index.html#contact">Contact</a></li>
+			</ul>
+		</div>
+	</nav>
+
+	<!-- Home -->
+	<article id="bsoctop" class="wrapper style3">
+		<div class="container">
+			<header class="bsocheader">
+				<h1>BraQIIIT Summer of Code 2022</h1>
+			</header>
+			<div class="row">
+				<p>
+					We are hosting the 2022 BraQIIIT Summer of Code between 03 June 2022 and 31 July 2022.
+					The program aims to introduce students to Qiskit and get a hands-on learning of quantum computing and its
+					nuances.
+					During the BSoC, the candidates will undergo a two week bootstrapping period with lectures on introduction to
+					basic and advanced Qiskit. For the remainder of BSoC, the students will be divided into teams and be involved
+					in various projects revolving around implemeting various quantum algorithms and testing them in simulators and
+					actual quantum computers. This will be done under the mentorship of Qiskit advocates and the members of
+					BraQIIIT.
 					<br>
 					<br>
 					<b>Thank you all for the overwhelming response. The registration for the event is now closed.</b>
-				</div>
 			</div>
-		</article>
+		</div>
+	</article>
 
-		<article id="bsocproject" class="wrapper style5">
-			<div class="container">
-				<!-- <header>
+	<article id="bsocproject" class="wrapper style5">
+		<div class="container">
+			<!-- <header>
 					<h2>Useful Resources</h2>
 				</header> -->
-				<div class="row aln-left">
-					<div class="col-6 col-6-medium col-12-small">
-						<section class="prereqlist">
-							<h3>Prerequisites</h3>
-							<br>
-							<span>
-								<ul>
-									<li>
-										The candidate must be a student of IIIT-D.
-									</li>
-									<li>
-										Interest in exploring quantum computing.
-									</li>
-									<li>
-										Experience in programming languages such as C, C++, Python are strongly recommended. Knowledge of Julia is an advantage but not necessary.
-									</li>
-									<li>
-										Knowledge on the baics of quantum computing is desirable.
-									</li>
-								</ul>
-							</span>
-						</section>
-					</div>
-					<div class="col-6 col-6-medium col-12-small">
-						<section>
-							<h3>Program Timeline</h3>
-							<span>
-								<table>
-									<tr>
-									  <td>02 Jun</td>
-									  <td>Registration Deadline</td>
-									</tr>
-									<br>
-									<tr>
-										<td>06 Jun - 18 Jun</td>
-										<td>Introduction to Qiskit</td>
-									  </tr>
-									  <tr>
-										<td>18 Jun - 07 Jul</td>
-										<td>Phase I</td>
-									  </tr>
-									  <tr>
-										<td>08 Jul - 09 Jul</td>
-										<td>Mid-term Review</td>
-									  </tr>
-									  <tr>
-										<td>08 Jul - 30 Jul</td>
-										<td>Phase II</td>
-									  </tr>
-									  <tr>
-										<td>01 Aug</td>
-										<td>Final Project Presentation</td>
-									  </tr>
-								  </table>
-							</span>
-						</section>
-					</div>
+			<div class="row aln-left">
+				<div class="col-6 col-6-medium col-12-small">
+					<section class="prereqlist">
+						<h3>Prerequisites</h3>
+						<br>
+						<span>
+							<ul>
+								<li>
+									The candidate must be a student of IIIT-D.
+								</li>
+								<li>
+									Interest in exploring quantum computing.
+								</li>
+								<li>
+									Experience in programming languages such as C, C++, Python are strongly recommended. Knowledge of
+									Julia is an advantage but not necessary.
+								</li>
+								<li>
+									Knowledge on the baics of quantum computing is desirable.
+								</li>
+							</ul>
+						</span>
+					</section>
+				</div>
+				<div class="col-6 col-6-medium col-12-small">
+					<section>
+						<h3>Program Timeline</h3>
+						<span>
+							<table>
+								<tr>
+									<td>02 Jun</td>
+									<td>Registration Deadline</td>
+								</tr>
+								<br>
+								<tr>
+									<td>06 Jun - 18 Jun</td>
+									<td>Introduction to Qiskit</td>
+								</tr>
+								<tr>
+									<td>18 Jun - 07 Jul</td>
+									<td>Phase I</td>
+								</tr>
+								<tr>
+									<td>08 Jul - 09 Jul</td>
+									<td>Mid-term Review</td>
+								</tr>
+								<tr>
+									<td>08 Jul - 30 Jul</td>
+									<td>Phase II</td>
+								</tr>
+								<tr>
+									<td>01 Aug</td>
+									<td>Final Project Presentation</td>
+								</tr>
+							</table>
+						</span>
+					</section>
 				</div>
 			</div>
-		</article>
+		</div>
+	</article>
 
-		<article id="bsocmentors" class="wrapper style5">
-			<div class="container">
-				<div class="row aln-left">
-					<div class="col-6 col-6-medium col-12-small">
-						<section>
-							<h3>Mentors</h3>
-							<span class="mentors">
-								<ul>
-									<li>
-										Sagnik Chatterjee
-									</li>
-									<li>
-										Tharrmashastha SAPV
-									</li>
-									<li>
-										Bhagesh Gaur
-									</li>
-									<h4>(Advised by)</h4>
-									<li>
-										Dr.Debajyoti Bera
-									</li>
-								</ul>
-							</span>
-						</section>
-					</div>
-					<div class="col-6 col-6-medium col-12-small">
-						<section class="projectslist">
-							<h3>Projects</h3>
-							<br>
-							<span>
-								<ul>
-									<li>
-										Designing a 50 qubit quantum simulator using Julia. <br>
-										<a href="https://github.com/QuantumBFS/Yao.jl">https://github.com/QuantumBFS/Yao.jl</a>
-									</li>
-									<li>
-										Implementing Shor's factoring algorithm from scratch to factor  large number n>81. <br>
-										<a href="https://arxiv.org/abs/quant-ph/9508027">https://arxiv.org/abs/quant-ph/9508027</a>
-									</li>
-									<li>
-										Realizing quantum clustering algorithms on a quantum simulator/backend. <br>
-										<a href="https://arxiv.org/abs/1307.0411">https://arxiv.org/abs/1307.0411</a>
-									</li>
-									<li>
-										Realizing quantum Principal Component Analysis on a quantum simulator/backend. <br>
-										<a href="https://arxiv.org/abs/1307.0401">https://arxiv.org/abs/1307.0401</a>
-									</li>
-								</ul>
-							</span>
-						</section>
-					</div>
+	<article id="bsocmentors" class="wrapper style5">
+		<div class="container">
+			<div class="row aln-left">
+				<div class="col-6 col-6-medium col-12-small">
+					<section>
+						<h3>Mentors</h3>
+						<span class="mentors">
+							<ul>
+								<li>
+									Sagnik Chatterjee
+								</li>
+								<li>
+									Tharrmashastha SAPV
+								</li>
+								<li>
+									Bhagesh Gaur
+								</li>
+								<h4>(Advised by)</h4>
+								<li>
+									Dr.Debajyoti Bera
+								</li>
+							</ul>
+						</span>
+					</section>
+				</div>
+				<div class="col-6 col-6-medium col-12-small">
+					<section class="projectslist">
+						<h3>Projects</h3>
+						<br>
+						<span>
+							<ul>
+								<li>
+									Designing a 50 qubit quantum simulator using Julia. <br>
+									<a href="https://github.com/QuantumBFS/Yao.jl">https://github.com/QuantumBFS/Yao.jl</a>
+								</li>
+								<li>
+									Implementing Shor's factoring algorithm from scratch to factor large number n>81. <br>
+									<a href="https://arxiv.org/abs/quant-ph/9508027">https://arxiv.org/abs/quant-ph/9508027</a>
+								</li>
+								<li>
+									Realizing quantum clustering algorithms on a quantum simulator/backend. <br>
+									<a href="https://arxiv.org/abs/1307.0411">https://arxiv.org/abs/1307.0411</a>
+								</li>
+								<li>
+									Realizing quantum Principal Component Analysis on a quantum simulator/backend. <br>
+									<a href="https://arxiv.org/abs/1307.0401">https://arxiv.org/abs/1307.0401</a>
+								</li>
+							</ul>
+						</span>
+					</section>
 				</div>
 			</div>
-		</article>
+		</div>
+	</article>
 
-		<article id="selectteams" class="wrapper style3">
-			<div class="container">
-				<header>
-					<h2>Selected Students</h2>
-				</header>
-					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<h3>Team 1</h3>
-								<ul>
-									<li>Akshansh Jaiswal</li>
-									<li>Jaskaran Singh</li>
-									<li>Pratyush Kumar</li>
-								</ul>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<h3>Team 2</h3>
-								<ul>
-									<li>Anindya Prithvi</li>
-									<li>Apoorva Arya</li>
-								</ul>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<h3>Team 1</h3>
-								<ul>
-									<li>Subhanshu Bansal</li>
-									<li>Vignesh Goswami</li>
-								</ul>
-							</section>
-						</div>
-					</div>
+	<article id="selectteams" class="wrapper style3">
+		<div class="container">
+			<header>
+				<h2>Selected Students</h2>
+			</header>
+			<div class="row aln-center">
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<h3>Team 1</h3>
+						<ul>
+							<li>Akshansh Jaiswal</li>
+							<li>Jaskaran Singh</li>
+							<li>Pratyush Kumar</li>
+						</ul>
+					</section>
 				</div>
-			</article>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<h3>Team 2</h3>
+						<ul>
+							<li>Anindya Prithvi</li>
+							<li>Apoorva Arya</li>
+						</ul>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<h3>Team 1</h3>
+						<ul>
+							<li>Subhanshu Bansal</li>
+							<li>Vignesh Goswami</li>
+						</ul>
+					</section>
 				</div>
 			</div>
-		</article>
+		</div>
+	</article>
+	</div>
+	</div>
+	</article>
 
-		<article id="contact" class="wrapper style4">
-			<div class="container medium">
-				<footer>
-					<ul id="copyright">
-						<li>Copyright &copy; IIIT-Delhi 2022. All rights reserved.</li>
-					</ul>
-				</footer>
-			</div>
-		</article>
+	<article id="contact" class="wrapper style4">
+		<div class="container medium">
+			<footer>
+				<ul id="copyright">
+					<li>Copyright &copy; IIIT-Delhi 2022. All rights reserved.</li>
+				</ul>
+			</footer>
+		</div>
+	</article>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
