--- a/index.html
+++ b/index.html
@@ -26,20 +26,22 @@
 					<li><a href="#top">Home</a></li>
 					<li><a href="#team">Team</a></li>
 					<li><a href="#publications">Publications</a></li>
+					<li><a href="talks.html">Talks</a></li>
 					<li><a href="#projects">Projects</a></li>
-					<li><a href="events.html">Events</a></li>
-					<li><a href="#resources">Resources</a></li>
+					<!-- <li><a href="events.html">BSOC</a></li> -->
+					<!-- <li><a href="#resources">Resources</a></li> -->
 					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</div>
-			<div>
-				<ul>
 					<li><a href="https://twitter.com/BQiiit" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
 					</li>
 					<li><a href="https://github.com/braqiiit" class="icon brands fa-github"><span class="label">Github</span></a>
 					</li>
 				</ul>
 			</div>
+			<!-- <div>
+				<ul>
+					
+				</ul>
+			</div> -->
 		</div>
 	</nav>
 
