--- a/Talks.html
+++ b/Talks.html
@@ -239,6 +239,25 @@
           <td data-label="Resources"> <a href="https://arxiv.org/abs/2302.07409" target="_blank"
               rel="noopener noreferrer">Paper</a></td>
         </tr>
+        <tr>
+          <td data-label="Speaker">Itai Leigh (Tel Aviv University)</td>
+          <td data-label="Title">TBA</td>
+
+          <td data-label="Date">TBA</td>
+
+          <td data-label="Resources"> <a href="" target="_blank" rel="noopener noreferrer">TBA</a></td>
+        </tr>
+        <tr>
+          <td data-label="Speaker">Mahathi Vempathi (QuICS, University of Maryland)</td>
+          <td data-label="Title">Total functions exhibit exponential quantum advantage — albeit in a parallel universe
+          </td>
+
+          <td data-label="Date">TBA</td>
+
+          <td data-label="Resources"> <a
+              href="https://quics.umd.edu/events/total-functions-exhibit-exponential-quantum-advantage-%E2%80%94-albeit-parallel-universe"
+              target="_blank" rel="noopener noreferrer">Abstract</a></td>
+        </tr>
       </tbody>
     </table>
   </div>
