--- a/Talks.html
+++ b/Talks.html
@@ -27,7 +27,7 @@
       top: 0;
       width: 100%;
       z-index: 1000;
-      max-height: 10vh;
+      max-height: 12vh;
       /* Ensure it stays above other content */
     }
 
@@ -197,7 +197,9 @@
     <a href="#" class="logo-right"><img src="images/cqt.png" alt="Right Logo"></a>
   </div>
 
-  <div class="centered-div">Welcome to Talks on Quantum Computing organized by the BraQIIIT lab at IIIT-Delhi. Our
+  <div class="centered-div" style="padding-top: 5em;">Welcome to Talks on Quantum Computing organized by the BraQIIIT
+    lab
+    at IIIT-Delhi. Our
     speakers, a group of talented and dynamic young researchers, will share their latest findings related to the field
     of quantum computing, engineering, and information.</div>
   <div class="centered-div">
