updated itais talk

--- a/Talks.html
+++ b/Talks.html
@@ -249,11 +249,12 @@
         </tr>
         <tr>
           <td data-label="Speaker">Itai Leigh (Tel Aviv University)</td>
-          <td data-label="Title">TBA</td>
+          <td data-label="Title">Discreteness of Asymptotic Tensor Ranks</td>
 
           <td data-label="Date">TBA</td>
 
-          <td data-label="Resources"> <a href="" target="_blank" rel="noopener noreferrer">TBA</a></td>
+          <td data-label="Resources"> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.ITCS.2024.20"
+              target="_blank" rel="noopener noreferrer">Paper</a></td>
         </tr>
         <tr>
           <td data-label="Speaker">Mahathi Vempathi (QuICS, University of Maryland)</td>
