--- a/Talks.html
+++ b/Talks.html
@@ -234,7 +234,7 @@
         <tr>
           <td data-label="Speaker">Gabriel Matos (Quantinuum)</td>
           <td data-label="Title">Characterization of variational quantum algorithms using free fermions</td>
-          <td data-label="Date">March 8, 2024 <br> Time TBA</td>
+          <td data-label="Date">March 8, 2024 <br> 8:00 PM IST</td>
           <td data-label="Resources"> <a href="https://quantum-journal.org/papers/q-2023-03-30-966/" target="_blank"
               rel="noopener noreferrer">Paper</a> </td>
         </tr>
@@ -242,7 +242,7 @@
           <td data-label="Speaker">Preetham Mohan (University of Michigan)</td>
           <td data-label="Title">Quantum Learning Theory Beyond Batch Binary Classification</td>
 
-          <td data-label="Date">March 15, 2024 <br> Time TBA</td>
+          <td data-label="Date">March 15, 2024 <br> 8:00 PM IST</td>
 
           <td data-label="Resources"> <a href="https://arxiv.org/abs/2302.07409" target="_blank"
               rel="noopener noreferrer">Paper</a></td>
