updated moble versiiion

--- a/Talks.html
+++ b/Talks.html
@@ -126,13 +126,16 @@
       /* This centers the div horizontally */
       /* background-color: rgb(16, 16, 17); */
       color: #3fada8;
-      padding: 10em;
+      padding: 2em;
       padding-bottom: 0;
+      text-align: center;
     }
 
     /* Media query for smaller screens */
 
     @media screen and (max-width: 600px) {
+
+
       footer {
         font-size: 14px;
       }
