updated website with details

--- a/Talks.html
+++ b/Talks.html
@@ -230,8 +230,8 @@
           <td data-label="Title">A Unifying Framework for Differentially Private Quantum Algorithms</td>
           <td data-label="Date">March 1, 2024 <br> 8:00 PM IST</td>
           <td data-label="Resources"> <a href="https://arxiv.org/abs/2307.04733" target="_blank"
-              rel="noopener noreferrer">Paper</a><br><span style="font-weight: 600">Google Meet
-              Code</span>: hkk-tias-vbe
+              rel="noopener noreferrer">Paper</a>, <a href="images/Armando Talk Flyer.pdf" target="_blank"
+              rel="noopener noreferrer">Poster</a>
           </td>
         </tr>
         <tr>
@@ -239,7 +239,9 @@
           <td data-label="Title">Characterization of variational quantum algorithms using free fermions</td>
           <td data-label="Date">March 8, 2024 <br> 8:00 PM IST</td>
           <td data-label="Resources"> <a href="https://quantum-journal.org/papers/q-2023-03-30-966/" target="_blank"
-              rel="noopener noreferrer">Paper</a> </td>
+              rel="noopener noreferrer">Paper</a>, <a href="images/Gabriel Talk Flyer.pdf" target="_blank"
+              rel="noopener noreferrer">Poster</a><br><span style="font-weight: 600">Google Meet
+              Code</span>: hkk-tias-vbe </td>
         </tr>
         <tr>
           <td data-label="Speaker">Preetham Mohan (University of Michigan)</td>
