--- a/Talks.html
+++ b/Talks.html
@@ -238,10 +238,13 @@
           <td data-label="Speaker">Gabriel Matos (Quantinuum)</td>
           <td data-label="Title">Characterization of variational quantum algorithms using free fermions</td>
           <td data-label="Date">March 8, 2024 <br> 8:00 PM IST</td>
-          <td data-label="Resources"> <a href="https://quantum-journal.org/papers/q-2023-03-30-966/" target="_blank"
-              rel="noopener noreferrer">Paper</a>, <a href="images/Gabriel Talk Flyer.pdf" target="_blank"
-              rel="noopener noreferrer">Poster</a><br><span style="font-weight: 600">Google Meet
-              Code</span>: hkk-tias-vbe </td>
+          <td data-label="Resources">
+            <a href="https://drive.google.com/file/d/1HIvxHVPpnVQEUGzvCm9J-fDjyK1kdbie/view?usp=sharing" target="_blank"
+              rel="noopener noreferrer">Video</a>,
+            <a href="images/Gabriel Talk Flyer.pdf" target="_blank" rel="noopener noreferrer">Poster</a>,
+            <a href="https://quantum-journal.org/papers/q-2023-03-30-966/" target="_blank"
+              rel="noopener noreferrer">Paper</a>
+          </td>
         </tr>
         <tr>
           <td data-label="Speaker">Preetham Mohan (University of Michigan)</td>
@@ -249,8 +252,12 @@
 
           <td data-label="Date">March 15, 2024 <br> 8:00 PM IST</td>
 
-          <td data-label="Resources"> <a href="https://arxiv.org/abs/2302.07409" target="_blank"
-              rel="noopener noreferrer">Paper</a></td>
+          <td data-label="Resources">
+            <a href="https://arxiv.org/abs/2302.07409" target="_blank" rel="noopener noreferrer">Paper</a>
+            <br>
+            <span style="font-weight: 600">Google Meet
+              Code</span>: hkk-tias-vbe
+          </td>
         </tr>
         <tr>
           <td data-label="Speaker">Itai Leigh (Tel Aviv University)</td>
