added registration form

--- a/Talks.html
+++ b/Talks.html
@@ -282,9 +282,12 @@
       </tbody>
     </table>
   </div>
-  <!-- <div class="centered-div">
-    <p><span style="font-weight: 600;font-size: larger;">Google Meet Code</span>: hkk-tias-vbe</p>
-  </div> -->
+  <div class="centered-div">
+    <p><span style="font-weight: 600;font-size: larger;">TQC talks Registration Form</span>:
+      <a href="https://forms.gle/M9DirUt8exnZBhwt7" target="_blank"
+        rel="noopener noreferrer">https://forms.gle/M9DirUt8exnZBhwt7</a>
+    </p>
+  </div>
   <div style="min-height: 20vh;"></div>
 </body>
 <footer>
